@@ -712,9 +712,9 @@
       <module id="eog"/>
       <module id="epiphany" branch="gnome-2-24"/>
       <module id="evince"/>
-      <module id="evolution"/>
-      <module id="evolution-data-server"/>
-      <module id="evolution-exchange"/>
+      <module id="evolution" branch="gnome-2-24"/>
+      <module id="evolution-data-server" branch="gnome-2-24"/>
+      <module id="evolution-exchange" branch="gnome-2-24"/>
       <module id="evolution-webcal"/>
       <module id="fast-user-switch-applet"/>
       <module id="file-roller"/>
@@ -727,7 +727,7 @@
       <module id="gnome-control-center"/>
       <module id="gnome-desktop"/>
       <module id="gnome-doc-utils"/>
-      <module id="gnome-games"/>
+      <module id="gnome-games" branch="gnome-2-24"/>
       <module id="gnome-icon-theme"/>
       <module id="gnome-keyring"/>
       <module id="gnome-mag"/>
@@ -742,16 +742,16 @@
       <module id="gnome-settings-daemon"/>
       <module id="gnome-system-monitor"/>
       <module id="gnome-system-tools"/>
-      <module id="gnome-terminal"/>
-      <module id="gnome-themes"/>
+      <module id="gnome-terminal" branch="gnome-2-24"/>
+      <module id="gnome-themes" branch="gnome-2-24"/>
       <module id="gnome-user-docs"/>
       <module id="gnome-utils"/>
       <module id="gnome-volume-manager"/>
       <module id="gok"/>
       <module id="gtk-engines"/>
-      <module id="gtkhtml"/>
+      <module id="gtkhtml" branch="gnome-2-24"/>
       <module id="gtksourceview"/>
-      <module id="gucharmap"/>
+      <module id="gucharmap" branch="gnome-2-24"/>
       <module id="gvfs" branch="gnome-2-24"/>
       <module id="hamster-applet"/>
       <module id="libgnomekbd"/>
@@ -769,7 +769,7 @@
       <module id="seahorse-plugins"/>
       <module id="sound-juicer" branch="gnome-2-24"/>
       <module id="swfdec-gnome"/>
-      <module id="tomboy"/>
+      <module id="tomboy" branch="gnome-2-24"/>
       <module id="totem" branch="gnome-2-24"/>
       <module id="totem-pl-parser" branch="gnome-2-24"/>
       <module id="vinagre"/>
