@@ -1,3 +1,9 @@
+2008-09-20  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: gnome-{themes,games,terminal}, gucharmap, tomboy,
+	evolution, evolution-data-server and evolution-exchange branched for GNOME 2.24.
+
 2008-09-22  Claude Paroz  <claude@2xlibre.net>
 
 	* releases.xml.in: release-notes 2.24 in gnome-infrastructure.
